// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Editlist/> has a valid snapshot 1`] = `
<div>
  <div
    className="modal"
    id="myModallundefined"
    role="dialog"
  >
    <div
      className="modal-dialog"
    >
      <div
        className="modal-content"
      >
        <div
          className="modal-header"
        >
          <h4>
            Edit List
          </h4>
          <button
            className="close"
            data-dismiss="modal"
            id="closeundefined"
            type="button"
          >
            ×
          </button>
        </div>
        <div
          className="modal-body"
        >
          <form
            className="register-form"
            id="editlist"
            method="POST"
            name="login_form"
            onSubmit={[Function]}
          >
            <div
              className="form-group"
            >
              NEW LIST NAME:
              <input
                className="form-control"
                id="list"
                name="list"
                onChange={[Function]}
                required={true}
                type="text"
                value={undefined}
              />
            </div>
            <button
              className="btn btn-info "
              type="submit"
            >
              Save List
            </button>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Editlist/> renders the edit list form and submits data 1`] = `
<div>
  <div
    className="modal"
    id="myModallundefined"
    role="dialog"
  >
    <div
      className="modal-dialog"
    >
      <div
        className="modal-content"
      >
        <div
          className="modal-header"
        >
          <h4>
            Edit List
          </h4>
          <button
            className="close"
            data-dismiss="modal"
            id="closeundefined"
            type="button"
          >
            ×
          </button>
        </div>
        <div
          className="modal-body"
        >
          <form
            className="register-form"
            id="editlist"
            method="POST"
            name="login_form"
            onSubmit={[Function]}
          >
            <div
              className="form-group"
            >
              NEW LIST NAME:
              <input
                className="form-control"
                id="list"
                name="list"
                onChange={[Function]}
                required={true}
                type="text"
                value="mangoes"
              />
            </div>
            <button
              className="btn btn-info "
              type="submit"
            >
              Save List
            </button>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;
